# poloto-project

./: .gitignore  .gitignore.swp  Cargo.toml  README.md  convert_to_png_test.sh  generate_doc_graphs.sh  serve_examples.sh  test.html  test.sh
assets/: custom_colors.html  custom_style.html  custom_style_embed.html  custom_style_embed2.html  custom_style_html.html  hover.html  hover_shadow.html  test.html
benches/: box_bench.rs  trig.rs
docs/: index.html
examples/: bar.rs  base_color.rs  collatz.rs  cows_per_year.rs  custom_color.rs  custom_colors_html.rs  custom_dim.rs  custom_style.rs  custom_style_embed.rs  custom_style_embed2.rs  custom_style_html.rs  custom_tick_fmt.rs  custom_ticks.rs  custom_unix.rs  dark.rs  days.rs  demo.rs  file_iter.rs  foo.rs  from_scratch.rs  gaussian.rs  heart.rs  hello_world.rs  hours.rs  hover_html.rs  hover_shadow_html.rs  large_scatter.rs  line_fill.rs  line_fill_fmt.rs  long_label.rs  magnitude.rs  marathon.rs  marker.rs  minutes.rs  minutes_local_time.rs  month.rs  monthly.rs  months.rs  no_legend.rs  nodash.rs  (+16 more)
poloto/: Cargo.toml  test-evcxr.ipynb
poloto-bench/: Cargo.toml
poloto-bench/benches/: box_bench.rs
poloto-chrono/: Cargo.toml  README.md
poloto-chrono/examples/: timestamp.rs
poloto-chrono/src/: lib.rs  tick_finder.rs
poloto-chrono/src/unixtime/: mod.rs  tests.rs
poloto-chrono/tests/: timestamp.rs
poloto-evcxr/: Cargo.toml  README.md  Untitled.ipynb  example.ipynb  float_int_test.ipynb  test_simple.ipynb
poloto-evcxr/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  example-checkpoint.ipynb
poloto-evcxr/examples/: evcxr.rs  hello_world.rs
poloto-evcxr/src/: lib.rs
poloto-example/: Cargo.toml  foo.html
poloto-example/src/: examples.rs  main.rs  markdown.css  support.rs  tests.rs
poloto/.ipynb_checkpoints/: test-evcxr-checkpoint.ipynb
poloto/examples/: collatz.rs  custom_tick_fmt.rs  custom_ticks.rs  gaussian.rs  hello_world.rs  styling.rs
poloto/src/: lib.rs  simple.rs  ticks.rs  util.rs
poloto/src/num/: float.rs  integer.rs  mod.rs
poloto/src/plotnum/: mod.rs
poloto/src/render/: mod.rs  render_base.rs  render_plot.rs
poloto/tests/plots/: html_plots.rs  main.rs  simple.rs  steps.rs  test_chart.rs  util.rs
poloto_bench/: Cargo.toml
poloto_bench/benches/: box_bench.rs
src/: bar.rs  bounded_iter.rs  buffered_iter.rs  build.rs  crop.rs  fmt.rs  iter.rs  lib.rs  main.rs  output_zip.rs  plotnum.rs  plottable.rs  polotofmt.rs  render.rs  simple.rs  simple_theme.rs  tick_fmt.rs  ticks.rs  util.rs
src/canvas/: mod.rs
src/context_ext/: mod.rs
src/num/: float.rs  integer.rs  mod.rs
src/num/timestamp/: mod.rs  tick_finder.rs  unixtime.rs
src/num/timestamp/unixtime/: mod.rs  tests.rs
src/num/unix_timestamp/: mod.rs  tick_finder.rs
src/plotnum/: ext.rs  mod.rs
src/render/: mod.rs  render_base.rs  render_helper.rs  render_plot.rs  render_plots.rs
src/util/: f64.rs  f64_.rs  i128.rs  mod.rs  utc.rs
src/util/integer/: i128.rs  mod.rs  utc.rs
src/util/integer/unix_timestamp/: mod.rs  tick_finder.rs  unixtime.rs
tests/plots/: count.rs  html_plots.rs  main.rs  simple.rs  steps.rs  test_chart.rs  thread_needle.rs  timestamp.rs  util.rs
