[package]
name = "poloto-chrono"
version = "0.1.0"
edition = "2021"
authors = ["Ken <kenakioreed@gmail.com>"]
license = "MIT"
repository = "https://github.com/tiby312/poloto-project"
description = "Simple 2D plotting library that outputs SVG and can be styled using CSS"
keywords = ["svg", "css","plot","chart","plotting"]
readme = "README.md"
include = ["src/**/*", "../LICENSE-MIT", "README.md"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poloto={path="../poloto",version="18.0"}
chrono="0.4"
hypermelon={version="0.5"}
