[package]
name = "poloto-evcxr"
version = "0.1.12"
edition = "2021"
authors = ["Ken <kenakioreed@gmail.com>"]
license = "MIT"
repository = "https://github.com/tiby312/poloto-project"
description = "Use poloto in evcxr"
keywords = ["svg", "css","plot","chart","plotting"]
readme = "README.md"
include = ["src/**/*", "../LICENSE-MIT", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
css-inline = { version="0.8.5", default-features=false}
hypermelon = "0.5.5"
poloto = { version = "18.0.6", path = "../poloto" }
