[package]
name = "poloto-evcxr"
version = "0.1.22"
edition = "2021"
authors = ["Ken <kenakioreed@gmail.com>"]
license = "MIT"
repository = "https://github.com/tiby312/poloto-project"
description = "Use poloto in evcxr"
keywords = ["svg", "css","plot","chart","plotting"]
readme = "README.md"
include = ["src/**/*", "../LICENSE-MIT", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
hypermelon = "0.6"
poloto = { version = "19.0", path = "../poloto" }
