[package]
name = "poloto-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tagu = "0.1"
poloto = { version = "19.0", path = "../poloto" }
pulldown-cmark = "0.9.3"
shower = "0.1.0"
synoptic = "1.2.0"
